# string_view

./: CMakeLists.txt  Doxyfile  README.md  vcpkg.json
.github/workflows/: ci_macos.yml  ci_ubuntu.yml  ci_windows.yml
ci_scripts/: ci_macos_deps.sh  ci_ubuntu_deps.sh  ci_windows_deps_x86.cmd
cmake/: daw-string-viewConfig.cmake.in
cmake/test_project/: CMakeLists.txt  test.cpp
docs/api_docs/html/: annotated.html  classes.html  daw__string__view2_8h.html  daw__string__view2_8h_source.html  daw__string__view2__fwd_8h.html  daw__string__view2__fwd_8h_source.html  dir_bbe37f38b13c9c6d535338573ad492f6.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.html  menudata.js  namespacedaw.html  namespacedaw_1_1sv2.html  namespacedaw_1_1sv2_1_1string__view__literals.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespacestd.html  structdaw_1_1sv2_1_1any__of__t-members.html  structdaw_1_1sv2_1_1any__of__t.html  structdaw_1_1sv2_1_1basic__string__view-members.html  structdaw_1_1sv2_1_1basic__string__view.html  structdaw_1_1sv2_1_1nodiscard__t.html  structdaw_1_1sv2_1_1none__of__t-members.html  structdaw_1_1sv2_1_1none__of__t.html  structstd_1_1hash_3_01daw_1_1sv2_1_1basic__string__view_3_01_char_t_00_01_bounds_00_01_ex_01_4_01_4-members.html  structstd_1_1hash_3_01daw_1_1sv2_1_1basic__string__view_3_01_char_t_00_01_bounds_00_01_ex_01_4_01_4.html  structstd_1_1hash_3_01daw_1_1sv2_1_1basic__string__view_3_01_char_t_00_01_bounds_01_4_01_4-members.html  structstd_1_1hash_3_01daw_1_1sv2_1_1basic__string__view_3_01_char_t_00_01_bounds_01_4_01_4.html
docs/api_docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  (+10 more)
include/daw/: daw_string_view2.h  daw_string_view2_fwd.h
tests/: CMakeLists.txt  daw_string_view2_test.cpp
tests/cmake/: test_compiler_options.cmake
